Fix text alignment, hamburger activation logic

--- a/scss/section/_company_history.scss
+++ b/scss/section/_company_history.scss
@@ -71,7 +71,10 @@
 
     &__paragraph {
         color: var.$black--opaque;
-        text-align: left;
+        
+        @include mix.respond_to(min, l_screen) {
+            text-align: left;
+        }
     }
 
 }
